# clean-architecture-dotnet

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Description  GitVersion.yml  LICENSE  README.md  clean-architecture-dotnet.sln  clean-architecture-dotnet.sln.DotSettings  coolstore.sln  coolstore.sln.DotSettings  docker-compose.yml  global.json  nuget.config  projects_code_map.dgml  restclient.http  tye.yaml
.github/workflows/: publish.yml
assets/: inbox_outbox_patterns.drawio  state_of_the_art.pptx
assets/PlantUML/: class_diagram.puml  class_diagram_details.puml  context_diagram.puml  erd_diagram.puml  services_diagram.puml  usecase_diagram.puml
components/: cron-customer-outbox.yaml
components/tye/: appconfig.yaml
rs/: .env  .gitignore  Cargo.toml
rs/audit_service/: Cargo.toml  Dockerfile
rs/audit_service/migrations/2021-02-18-090817_init_db/: down.sql  up.sql
rs/audit_service/src/: db_connection.rs  lib.rs  main.rs  schema.rs
rs/audit_service/src/domain/: history.rs  mod.rs
rs/audit_subscriber/: Cargo.toml
rs/migrations/2021-02-18-090817_init_db/: down.sql  up.sql
rs/rs/: Cargo.toml
rs/src/: db_connection.rs  main.rs  schema.rs
rs/src/models/: history.rs  mod.rs
samples/: restclient.http  tye.yaml
samples/IdentityServer/: Config.cs  IdentityServer.csproj  Program.cs
samples/Web/: next.config.js  package-lock.json
samples/components/: cron-product-outbox.yaml
samples/eCommerce/: tye.yaml
src/: packages.props
src/BuildingBlocks/: packages.props
src/N8T.Core/: N8T.Core.csproj
src/Web/: package-lock.json  (+1 more)
(+472 files in other folders)
