[package]
name = "audit_service"
version = "0.1.0"
authors = ["thangchung <thangchung@ymail.com>"]
edition = "2018"

[lib]
name = "audit_service_lib"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
listenfd = "0.3.3"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
diesel_migrations = "1.4.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
serde_derive = "1.0.123"
uuid = {version="0.8.2", features = ["serde", "v4"]}
dotenv = "0.15.0"
env_logger = "0.8.3"
chrono = {version="0.4.19", features = ["serde"]}
openssl = "*"
openssl-probe = "0.1.2"
